tests/ui/var_not_found.ray
// COMPILE_FAIL

fn main() {
    a;
}
